Fix up issues which city buttons are misaligned on small devices

--- a/src/components/CarouselArrows/CarouselArrows.css
+++ b/src/components/CarouselArrows/CarouselArrows.css
@@ -3,6 +3,10 @@
   height: 35px;
 }
 
+.ReactModal__Overlay--after-open {
+  z-index: 100;
+}
+
 .OffersCarousel--container .CarouselArrows--container.slick-prev{
   left: -35px;
 }
